tests/parsing/smtlib/v2.7/errors/124_selector_list_unclosed_1.smt2
(set-logic ALL)
(declare-datatype foo ((A (x int) _)))
